--- a/Proiect-MTP/Site1.Master
+++ b/Proiect-MTP/Site1.Master
@@ -1,19 +1,79 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site1.master.cs" Inherits="Proiect_MTP.Site1" %>
 
 <!DOCTYPE html>
-
 <html>
 <head runat="server">
-    <title></title>
-    <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title><asp:ContentPlaceHolder ID="head" runat="server" /></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
+    <style>
+        body {
+            background: url(Imagini/Fun1.jpg) no-repeat center center fixed;
+            background-size: cover;
+            overflow-x: hidden; /* Previne derularea orizontală */
+        }
+        .logo {
+            position: absolute;
+            top: 10px;
+            left: 15px;
+            width: 130px;
+            height: auto;
+        }
+        nav {
+            margin-top: 20px;
+        }
+        .container {
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            margin-top: 50px;
+        }
+    </style>
 </head>
 <body>
     <form id="form1" runat="server">
-        <div>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
+        <!-- Antetul paginii -->
+        <header>
+            <img src="Imagini/Logo1.jpg" alt="Logo" class="logo" />
+        </header>
+
+        <!-- Meniul de navigare -->
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <asp:Button ID="ButtonMyProfile" runat="server" CssClass="nav-link" Text="My profile" OnClick="ButtonMyProfile_Click" />
+                    </li>
+                    <li class="nav-item">
+                        <asp:Button ID="ButtonSearchMovies" runat="server" CssClass="nav-link" Text="Search movie/series" OnClick="ButtonSearchMovies_Click" />
+                    </li>
+                    <li class="nav-item">
+                        <asp:Button ID="ButtonTop" runat="server" CssClass="nav-link" Text="Most popular movies" OnClick="ButtonTop_Click" />
+                    </li>
+                    <li class="nav-item">
+                        <asp:Button ID="ButtonSettings" runat="server" CssClass="nav-link" Text="Settings" OnClick="ButtonSettings_Click" />
+                    </li>
+                    <li class="nav-item">
+                        <asp:Button ID="ButtonLogin" runat="server" CssClass="nav-link" Text="Login/Sign up" OnClick="ButtonLogin_Click" />
+                    </li>
+                    <li class="nav-item">
+                        <asp:Button ID="ButtonHelp" runat="server" CssClass="nav-link" Text="Help" OnClick="ButtonHelp_Click" />
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <!-- Continutul paginii -->
+        <div class="container">
+            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server" />
         </div>
     </form>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
